--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
 
 <head>
     <title>Sample form</title>
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
+    <link rel="stylesheet" href="styles/main.css">
 </head>
 
 <body>
@@ -20,21 +22,96 @@
     charset="utf-8">
 </script>
 
-<form id="paymentForm"
-    method="POST"
-    action="https://YourServer/PathToExistingPaymentProcessingScript">
-    <input type="hidden" name="dataValue" id="dataValue" />
-    <input type="hidden" name="dataDescriptor" id="dataDescriptor" />
-    <button type="button"
-        class="AcceptUI"
-        data-billingAddressOptions='{"show":true, "required":false}' 
-        data-apiLoginID="q4x1ds34" 
-        data-clientKey="4j85t67j54Ex6Gy7eD9g6vFC8nrs6XkTVg4NpC2csMy4bA5y9NCVHVbbYmB96AEA"
-        data-acceptUIFormBtnTxt="Submit" 
-        data-acceptUIFormHeaderTxt="Card Information" 
-        data-responseHandler="responseHandler">Pay
-    </button>
-</form>
+<div class="container py-5" style="max-width: 900px;">
+    <div class="card-deck">
+        <div class="card">
+            <svg class="bd-placeholder-img card-img-top" width="100%" height="200" xmlns="http://www.w3.org/2000/svg" preserveAspectRatio="xMidYMid slice" focusable="false" role="img" aria-label="Placeholder: Image cap"><title>Placeholder</title><rect width="100%" height="100%" fill="#868e96"></rect><text x="50%" y="50%" fill="#dee2e6" dy=".3em">Image cap</text></svg>
+            <div class="card-body">
+                <h5 class="card-title">Card title</h5>
+                <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+                <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+            </div>
+            <div class="card-footer">
+                <button class="btn btn-primary purchase-btn" data-packagename="myName1" и data-price="100501">Buy</button>
+            </div>
+        </div>
+        <div class="card">
+            <svg class="bd-placeholder-img card-img-top" width="100%" height="200" xmlns="http://www.w3.org/2000/svg" preserveAspectRatio="xMidYMid slice" focusable="false" role="img" aria-label="Placeholder: Image cap"><title>Placeholder</title><rect width="100%" height="100%" fill="#868e96"></rect><text x="50%" y="50%" fill="#dee2e6" dy=".3em">Image cap</text></svg>
+            <div class="card-body">
+                <h5 class="card-title">Card title</h5>
+                <p class="card-text">This card has supporting text below as a natural lead-in to additional content.</p>
+                <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+            </div>
+            <div class="card-footer">
+                <button class="btn btn-primary purchase-btn" data-packagename="myName2" и data-price="100502">Buy</button>
+            </div>
+        </div>
+        <div class="card">
+            <svg class="bd-placeholder-img card-img-top" width="100%" height="200" xmlns="http://www.w3.org/2000/svg" preserveAspectRatio="xMidYMid slice" focusable="false" role="img" aria-label="Placeholder: Image cap"><title>Placeholder</title><rect width="100%" height="100%" fill="#868e96"></rect><text x="50%" y="50%" fill="#dee2e6" dy=".3em">Image cap</text></svg>
+            <div class="card-body">
+                <h5 class="card-title">Card title</h5>
+                <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This card has even longer content than the first to show that equal height action.</p>
+                <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+            </div>
+            <div class="card-footer">
+                <button class="btn btn-primary purchase-btn" data-packagename="myName3" и data-price="100503">Buy</button>
+            </div>
+        </div>
+    </div>
+</div>
+
+<div class="purchase-popup-wrapper">
+    <div class="card shadow">
+        <div class="card-header">
+            <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+              <span aria-hidden="true">&times;</span>
+            </button>
+            <h5 class="card-title" data-message="Purchase %data-packagename% package for %data-price%"></h5>
+        </div>
+        <form class="card-body">
+            <input type="hidden" name="packagename" value="">
+            <input type="hidden" name="price" value="">
+            <input type="hidden" name="dataValue" id="dataValue" />
+            <input type="hidden" name="dataDescriptor" id="dataDescriptor" />
+            <div class="form-group">
+                <input type="text"name="firstname" placeholder="First name" class="form-control" required>
+            </div>
+            <div class="form-group">
+                <input type="text" name="lastname" placeholder="Last name" class="form-control" required>
+            </div>
+            <div class="form-group">
+                <input type="text" name="address" placeholder="Street Address" class="form-control" required>
+            </div>
+            <div class="form-group">
+                <input type="text" name="city" placeholder="City" class="form-control" required>
+            </div>
+            <div class="form-group">
+                <select name="state" class="form-control" required>
+                    <option disabled selected>State</option>
+                    <option value="ny">New York</option>
+                    <option value="wac">Washington</option>
+                </select>
+            </div>
+            <div class="form-group">
+                <input type="phone" name="zip" placeholder="Zip" class="form-control" required>
+            </div>
+            <div class="form-group">
+                <input type="phone" name="phone" placeholder="Phone Number" class="form-control" required>
+            </div>
+            <div class="form-group">
+                <button type="button"
+                    class="AcceptUI btn btn-primary"
+                    data-billingAddressOptions='{"show":true, "required":false}' 
+                    data-apiLoginID="q4x1ds34" 
+                    data-clientKey="4j85t67j54Ex6Gy7eD9g6vFC8nrs6XkTVg4NpC2csMy4bA5y9NCVHVbbYmB96AEA"
+                    data-acceptUIFormBtnTxt="Submit" 
+                    data-acceptUIFormHeaderTxt="Card Information" 
+                    data-responseHandler="responseHandler">Go to card details
+                </button>
+            </div>
+        </div>
+    </div>
+</div>
 
 <script type="text/javascript">
 
@@ -68,6 +145,7 @@ function paymentFormUpdate(opaqueData) {
     document.getElementById("paymentForm").submit();
 }
 </script>
-
+<script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
+<script src="js/main.js"></script>
 </body>
 </html>
