--- a/index.html
+++ b/index.html
@@ -116,6 +116,7 @@
 <script type="text/javascript">
 
 function responseHandler(response) {
+    console.log(response);
     if (response.messages.resultCode === "Error") {
         var i = 0;
         while (i < response.messages.message.length) {
