--- a/index.html
+++ b/index.html
@@ -68,11 +68,11 @@
             </button>
             <h5 class="card-title" data-message="Purchase %data-packagename% package for %data-price%"></h5>
         </div>
-        <form class="card-body">
+        <form class="card-body" id="paymentForm">
             <input type="hidden" name="packagename" value="">
             <input type="hidden" name="price" value="">
-            <input type="hidden" name="dataValue" id="dataValue" />
-            <input type="hidden" name="dataDescriptor" id="dataDescriptor" />
+            <input type="hidden" name="dataValue" id="dataValue">
+            <input type="hidden" name="dataDescriptor" id="dataDescriptor">
             <div class="form-group">
                 <input type="text"name="firstname" placeholder="First name" class="form-control" required>
             </div>
@@ -116,34 +116,39 @@
 <script type="text/javascript">
 
 function responseHandler(response) {
-    console.log(response);
     if (response.messages.resultCode === "Error") {
+        var errors = [];
         var i = 0;
+
         while (i < response.messages.message.length) {
-            console.log(
+            errors.push(
                 response.messages.message[i].code + ": " +
                 response.messages.message[i].text
             );
             i = i + 1;
         }
+
+        paymentFormUpdate({errors});
     } else {
         paymentFormUpdate(response.opaqueData);
     }
 }
 
-
 function paymentFormUpdate(opaqueData) {
-    document.getElementById("dataDescriptor").value = opaqueData.dataDescriptor;
-    document.getElementById("dataValue").value = opaqueData.dataValue;
+    if (opaqueData.errors) {
+        alert(opaqueData.errors.join("\n"));
+    } else {
+        document.getElementById("dataDescriptor").value = opaqueData.dataDescriptor;
+        document.getElementById("dataValue").value = opaqueData.dataValue;
 
-    // If using your own form to collect the sensitive data from the customer,
-    // blank out the fields before submitting them to your server.
-    // document.getElementById("cardNumber").value = "";
-    // document.getElementById("expMonth").value = "";
-    // document.getElementById("expYear").value = "";
-    // document.getElementById("cardCode").value = "";
-
-    document.getElementById("paymentForm").submit();
+        $.ajax({
+            url: '/YourServer/PathToExistingPaymentProcessingScript',
+            method: 'POST',
+            data: $("#paymentForm").serialize(),
+            success: function(response) {},
+            error: function(data) {},
+        });
+    }
 }
 </script>
 <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
