--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 <body>
 
 <script type="text/javascript"
-    src="https://jstest.authorize.net/v3/AcceptUI.js"
+    src="https://js.authorize.net/v3/AcceptUI.js"
     charset="utf-8">
 </script>
 
