--- a/index.html
+++ b/index.html
@@ -190,7 +190,7 @@ function paymentFormUpdate(response) {
     }
 }
 
-popupAlert(title, message) {
+function popupAlert(title, message) {
     var $popupAlert = $('.popup-alert');
 
     popupAlert.find('.popup-alert-title').html(title);
