--- a/index.html
+++ b/index.html
@@ -179,7 +179,7 @@ function paymentFormUpdate(response) {
                     case 'success':
                         title = 'Success';
 
-                        $paymentForm.hide();
+                        $('.purchase-popup-wrapper').hide();
 
                         break;
                     case 'fail':
